<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top"
    tools:context=".screens.future.FutureWeather">

    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar" />

    <ImageView
        android:id="@+id/imgBtnBack"
        android:layout_width="@dimen/_60dp"
        android:layout_height="@dimen/_40dp"
        android:layout_margin="6dp"
        android:padding="@dimen/_5dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:tint="#FFFFFF"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_5_days"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sp"
        app:layout_constraintBottom_toBottomOf="@id/imgBtnBack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgBtnBack" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_7day"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBtnBack" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/bg_day_item_2st"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/bgCenter"
        android:layout_width="0dp"
        android:layout_height="@dimen/_350dp"
        android:layout_margin="40dp"
        android:background="@drawable/bg_day_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/bgBottom"
        android:layout_width="0dp"
        android:layout_height="@dimen/_85dp"
        android:layout_margin="40dp"
        android:background="@drawable/bg_day_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bgCenter"
        app:layout_constraintVertical_bias="1"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imgStatus"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_30dp"
        android:src="@drawable/ic_weather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bgCenter"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvStatusFuture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_20dp"
        android:text="@string/clear_sky"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sp"
        app:layout_constraintStart_toStartOf="@id/bgCenter"
        app:layout_constraintTop_toBottomOf="@id/imgStatus" />

    <TextView
        android:id="@+id/tvToNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Tonight"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        app:layout_constraintStart_toStartOf="@id/tvStatusFuture"
        app:layout_constraintTop_toBottomOf="@id/tvStatusFuture" />

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:text="@string/_29_c"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@id/bgCenter"
        app:layout_constraintLeft_toRightOf="@id/imgStatus"
        app:layout_constraintTop_toTopOf="@id/bgCenter" />

    <TextView
        android:id="@+id/tvFeelLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/feels_like"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/bgCenter"
        app:layout_constraintStart_toStartOf="@id/tvTemp"
        app:layout_constraintTop_toBottomOf="@id/tvTemp" />

    <ImageView
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:src="@drawable/ic_feel_like"
        app:layout_constraintEnd_toEndOf="@id/bgCenter"
        app:layout_constraintStart_toStartOf="@id/tvTemp"
        app:layout_constraintTop_toBottomOf="@id/tvFeelLike"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imgWind"
        android:layout_width="@dimen/_70dp"
        android:layout_height="@dimen/_70dp"
        android:layout_marginBottom="@dimen/_5dp"
        android:background="@drawable/bg_day_item_3st"
        android:padding="@dimen/_15dp"
        android:src="@drawable/ic_wind"
        app:layout_constraintBottom_toTopOf="@+id/tvWind"
        app:layout_constraintLeft_toLeftOf="@id/bgCenter"
        app:layout_constraintRight_toLeftOf="@id/imgPressure"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imgPressure"
        android:layout_width="@dimen/_70dp"
        android:layout_height="@dimen/_70dp"
        android:layout_marginBottom="@dimen/_5dp"
        android:background="@drawable/bg_day_item_3st"
        android:padding="@dimen/_15dp"
        android:src="@drawable/ic_pressure"
        app:layout_constraintBottom_toTopOf="@id/tvPressure"
        app:layout_constraintLeft_toRightOf="@id/imgWind"
        app:layout_constraintRight_toLeftOf="@id/imgHumidity"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imgHumidity"
        android:layout_width="@dimen/_70dp"
        android:layout_height="@dimen/_70dp"
        android:layout_marginBottom="@dimen/_5dp"
        android:background="@drawable/bg_day_item_3st"
        android:padding="@dimen/_15dp"
        android:src="@drawable/humidity"
        app:layout_constraintBottom_toTopOf="@id/tvPressure"
        app:layout_constraintLeft_toRightOf="@id/imgPressure"
        app:layout_constraintRight_toRightOf="@id/bgCenter"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10dp"
        android:text="@string/_16_km_h"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@id/bgCenter"
        app:layout_constraintLeft_toLeftOf="@id/imgWind"
        app:layout_constraintRight_toRightOf="@id/imgWind" />

    <TextView
        android:id="@+id/tvPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10dp"
        android:text="@string/_1004_1_mb"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@id/bgCenter"
        app:layout_constraintLeft_toLeftOf="@id/imgPressure"
        app:layout_constraintRight_toRightOf="@id/imgPressure" />

    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10dp"
        android:text="@string/_76"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@id/bgCenter"
        app:layout_constraintLeft_toLeftOf="@id/imgHumidity"
        app:layout_constraintRight_toRightOf="@id/imgHumidity" />

    <ImageView
        android:id="@+id/imgStatusFuture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginStart="-10dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:src="@drawable/ic_weather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvStatusNextDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/clear_sky"
        android:textColor="@color/black"
        android:textSize="@dimen/_24sp"
        app:layout_constraintEnd_toEndOf="@id/bgBottom"
        app:layout_constraintStart_toStartOf="@id/bgBottom"
        app:layout_constraintTop_toTopOf="@id/bgBottom" />

    <TextView
        android:id="@+id/tvDayInWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_29sep_tuesday"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tvStatusNextDay"
        app:layout_constraintStart_toStartOf="@id/tvStatusNextDay"
        app:layout_constraintTop_toBottomOf="@id/tvStatusNextDay" />

    <TextView
        android:id="@+id/tvMaxMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5dp"
        android:text="@string/_17_c_22_c"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/bgBottom"
        app:layout_constraintEnd_toEndOf="@id/tvStatusNextDay"
        app:layout_constraintStart_toStartOf="@id/tvStatusNextDay"
        app:layout_constraintTop_toBottomOf="@id/tvDayInWeek" />

    <ImageView
        android:id="@+id/imgNextDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/_10dp"
        android:src="@drawable/ic_righ"
        app:layout_constraintBottom_toBottomOf="@id/bgBottom"
        app:layout_constraintEnd_toEndOf="@id/bgBottom"
        app:layout_constraintTop_toTopOf="@id/bgBottom"
        app:tint="#FFFFFF"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/fragment_container_view_future"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>